--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,10 +1,30 @@
 <% provide :title, "Home" %>
 <!DOCTYPE html>
 <html>
-	<div class="center jumbotron">
-		<h1>This is sample app</h1>
-		<h2>This is home page</h2>
-		<%= link_to "Sign up now", signup_path, class: "btn btn-lg btn-primary" %>
-	</div>
+	<% if logged_in? %>
+		<div class="row">
+			<aside class="col-md-4">
+				<section class="user_info">
+					<%= render 'shared/user_info' %>
+				</section>
+				<section class="stats">
+					<%= render 'shared/stats' %>
+				</section>
+				<section class="micropost_form">
+					<%= render 'shared/entry_form' %>
+				</section>
+			</aside>
+			<div class="col-md-8">
+				<h3>Entry feed</h3>
+				<%= render "shared/feed" %>
+			</div>
+		</div>
+	<% else %>
+		<div class="center jumbotron">
+			<h1>Welcome to the sample app</h1>
+			<h2>This is home page</h2>
+			<%= link_to "Sign up now", signup_path, class: "btn btn-lg btn-primary" %>
+		</div>
+	<% end %>
 	<%= link_to image_tag "rails.png", alt: "Rails_Logo" %>
 </html>
