--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -9,10 +9,11 @@
 		</section>
 	</aside>
 	<div class="col-md-8">
+		<%= render 'follow_form' if logged_in? %>
 		<% if @user.entries.any? %>
 			<h3>Entries (<%= @user.entries.count %>)</h3>
 			<ol class="microposts">
-				<%= render @entry %>
+				<%= render @entries %>
 			</ol>
 		<% end %>
 	</div>
